# pg-bulk-ingest

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  codecov.yml  eleventy.config.js  package-lock.json  package.json  pg_bulk_ingest.py  pyproject.toml  start-services.sh  stop-services.sh  test_pg_bulk_ingest.py
.github/workflows/: deploy-docs-to-github-pages.yml  deploy-package-to-pypi.yml  publish-pypi.yml  test.yml
docs/: CNAME  airflow.md  api.md  compatibility.md  dagster.md  get-started.md  high-watermark.md  index.md  ingesting-data-with-airflow.md  table-definitions.md  under-the-hood.md  utility-functions.md
docs/sass/: _settings.scss
pg_bulk_ingest/: __init__.py
