[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-bulk-ingest"
version = "0.0.13"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "A collection of Python utility functions for ingesting data into SQLAlchemy-defined PostgreSQL tables, automatically migrating them as needed, and minimising locking"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=1.4.24",
    "pg-force-execute>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "psycopg>=3.1.4",
    "psycopg2>=2.9.2",
    "pytest>=7.2.1",
]
ci = [
    "pytest==7.2.1",
]
ci-psycopg2-sqlalchemy1 = [
    "psycopg2==2.9.2",
    "sqlalchemy==1.4.24",
]
ci-psycopg2-sqlalchemy2 = [
    "psycopg2==2.9.2",
    "sqlalchemy==2.0.0",
]
ci-psycopg3-sqlalchemy2 = [
    "psycopg==3.1.4",
    "sqlalchemy==2.0.0",
]

[project.urls]
"Source" = "https://github.com/uktrade/pg-bulk-ingest"

[tool.hatch.build]
include = [
  "pg_bulk_ingest.py"
]
