[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-bulk-ingest"
version = "0.0.0.dev0"
authors = [
  { name="Department for Business and Trade", email="sre@digital.trade.gov.uk" },
]
description = "A collection of Python utility functions for ingesting data into SQLAlchemy-defined PostgreSQL tables, automatically migrating them as needed, and minimising locking"
readme = "README.md"
requires-python = ">=3.7.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy>=1.4.24",
    "pg-force-execute>=0.0.10",
    "to-file-like-obj>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "psycopg>=3.1.4",
    "psycopg2>=2.9.2",
    "pgvector>=0.1.8",
    "pytest>=7.2.1",
    # Polars integration
    "polars>=1.0.0;python_version>='3.8'",
    "pyarrow>=8.0.0",
    # Pandas integration
    "pandas>=1.3.5",
    "numpy>=1.20.3",
    # Type checking
    "mypy <1.5",
]
ci = [
    "pgvector",
    "pytest",
    "pytest-cov",
    "coverage",
    # Polars integration
    "polars>=1.0.0;python_version>='3.8'",
    "pyarrow>=8.0.0",
    # Pandas integration
    "numpy",
    "pandas",
    # Type checking
    "mypy <1.5",
]
ci-psycopg2-sqlalchemy1 = [
    "psycopg2==2.9.2",
    "sqlalchemy==1.4.24",
    "to-file-like-obj==0.0.5",
]
ci-psycopg2-sqlalchemy2 = [
    "psycopg2==2.9.2",
    "sqlalchemy==2.0.0",
    "to-file-like-obj==0.0.5",
]
ci-psycopg2-9-10-sqlalchemy1 = [
    "psycopg2==2.9.10",
    "sqlalchemy==1.4.24",
    "to-file-like-obj==0.0.5",
]
ci-psycopg3-sqlalchemy2 = [
    "psycopg==3.1.4",
    "sqlalchemy==2.0.0",
    "to-file-like-obj==0.0.5",
]
ci-psycopg2-9-10-sqlalchemy2-0-31 = [
    "psycopg2==2.9.10",
    "sqlalchemy==2.0.31",
    "to-file-like-obj==0.0.5",
]
ci-psycopg3-sqlalchemy2-0-31 = [
    "psycopg==3.1.4",
    "sqlalchemy==2.0.31",
    "to-file-like-obj==0.0.5",
]

[project.urls]
"Source" = "https://github.com/uktrade/pg-bulk-ingest"

[tool.hatch.build]
include = [
  "pg_bulk_ingest"
]

[tool.hatch.envs.dev]
dependencies = [
    "psycopg>=3.1.4",
    "psycopg2>=2.9.2",
    "pytest>=7.2.1",
    # Type checking
    "mypy <1.5",
    "pytest",
]

[tool.mypy]
ignore_missing_imports = true

